# dprint-plugin-vue

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dprint.json  test.dprint.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: configuration.rs  format.rs  lib.rs  parser.rs  plugin.rs
src/parser/: block.rs  section.rs  util.rs
test/: file.vue  ts.vue
