[package]
name = "dprint-plugin-vue"
version = "0.1.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[dependencies]
anyhow = "1.0.52"
dprint-core = { version = "0.49", features = ["wasm"] }
nom = "7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
