[package]
name = "dprint-plugin-vue"
version = "0.3.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["dprint-core/wasm"]

[dependencies]
anyhow = "1.0.52"
dprint-core = "0.50"
nom = "7.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1"
