[package]
name = "dprint-plugin-vue"
version = "0.3.2"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[dependencies]
anyhow = "1.0.52"
blake3 = "1.3.1"
dprint-core = { version = "0.50", features = ["wasm"] }
nom = "7.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1"
vue-sfc = "0.2"
